--- a/_sass/color_schemes/beadl.scss
+++ b/_sass/color_schemes/beadl.scss
@@ -1,4 +1,4 @@
-$body-background-color: $grey-dk-200;
+$body-background-color: #303030;
 $sidebar-color: $grey-dk-300;
 $border-color: $grey-dk-200;
 
