--- a/_sass/color_schemes/beadl.scss
+++ b/_sass/color_schemes/beadl.scss
@@ -1,4 +1,4 @@
-$body-background-color: #0D1117;
+$body-background-color: $grey-dk-300;
 $sidebar-color: $grey-dk-300;
 $border-color: $grey-dk-200;
 
@@ -16,6 +16,3 @@ $search-background-color: $grey-dk-250;
 $table-background-color: $grey-dk-250;
 $feedback-color: darken($sidebar-color, 3%);
 
-.btn-orange {
-    @include btn-color($white, #ff9100);
-  }
