--- a/_sass/color_schemes/beadl.scss
+++ b/_sass/color_schemes/beadl.scss
@@ -1,5 +1,5 @@
 $body-background-color: #0D1117;
-$sidebar-color: $grey-dk-300;
+$sidebar-color: #0D1117;
 $border-color: $grey-dk-200;
 
 $body-text-color: $grey-lt-300;
