--- a/_sass/color_schemes/beadl.scss
+++ b/_sass/color_schemes/beadl.scss
@@ -16,3 +16,4 @@ $code-background-color: #0D1117;
 $search-background-color: $grey-dk-250;
 $table-background-color: $grey-dk-250;
 $feedback-color: darken($sidebar-color, 3%);
+$content-width: 900px;
