--- a/_sass/color_schemes/beadl.scss
+++ b/_sass/color_schemes/beadl.scss
@@ -13,10 +13,9 @@ $base-button-color: $grey-dk-250;
 
 //$code-background-color: $grey-lt-200;
 $code-background-color: #0D1117;
+$inline-code-color: #268bd2 !default;
 $search-background-color: $grey-dk-250;
 $table-background-color: $grey-dk-250;
 $feedback-color: darken($sidebar-color, 3%);
 
 $content-width: 900px;
-
-$inline-code-color: #268bd2;
