--- a/_sass/color_schemes/beadl.scss
+++ b/_sass/color_schemes/beadl.scss
@@ -12,8 +12,7 @@ $btn-primary-color: $blue-200;
 $base-button-color: $grey-dk-250;
 
 //$code-background-color: $grey-lt-200;
-$code-background-color: #0D1117;
-$inline-code-color: #268bd2;
+$code-background-color: $body-background-color;
 $search-background-color: $grey-dk-250;
 $table-background-color: $grey-dk-250;
 $feedback-color: darken($sidebar-color, 3%);
